--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -10,3 +10,9 @@ jobs:
     steps:
       - name: Check out repository code
         uses: actions/checkout@v3
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 18
+      - run: npm ci
+      - run: npm test
