maybe add nodejs install v2

--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -10,9 +10,6 @@ jobs:
     steps:
       - name: Check out repository code
         uses: actions/checkout@v3
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
+      - uses: dreamcodez/dead-simple-nodejs@1
         with:
-          node-version: 18
-      - run: npm ci
-      - run: npm test
+          NODE_VERSION: 16.1.0
