--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -10,6 +10,10 @@ jobs:
     steps:
       - name: Check out repository code
         uses: actions/checkout@v3
-      - uses: dreamcodez/dead-simple-nodejs@1
+      - name: setup nodeJS
+        uses: actions/checkout@v4
+        uses: actions/setup-node@v4
         with:
-          NODE_VERSION: 16.1.0
+          node-version: 20
+        run: npm ci
+        run: npm test
