--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -10,10 +10,9 @@ jobs:
     steps:
       - name: Check out repository code
         uses: actions/checkout@v3
-      - name: setup nodeJS
-        uses: actions/checkout@v4
-        uses: actions/setup-node@v4
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
-          node-version: 20
-        run: npm ci
-        run: npm test
+        node-version: 20
+      - run: npm ci
+      - run: npm test
