--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -14,5 +14,5 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 20
-      - run: npm ci
-      - run: npm test
+      - run: yarn start
+      - run: yarn test
