--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -29,5 +29,5 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v6
         with:
-          push: false
-          tags: user/app:latest
+          push: true
+          tags: mattiaslg/webapp:latest
