--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,11 +4,10 @@ version: 2
 updates:
 
   - package-ecosystem: "github-actions"
-    directory: "/"
+    directory: "."
     schedule:
-      # Check for updates to GitHub Actions every week
       interval: "weekly"
-  - package-ecosystem: "yarn"
-    directory: "/"
+  - package-ecosystem: "npm" 
+    directory: "." 
     schedule:
       interval: "weekly"
